@@ -38,7 +38,7 @@ public enum Key {
     AUTH_COOKIE_REMEMBER_EXPIRES("auth.cookie.remember.expires"),
     AUTH_COOKIE_SECURE("auth.cookie.secure"),
     AUTH_COOKIE_VERSION("auth.cookie.version"),
-    CACHE_TYPE("cache.class"),
+    CACHE_TYPE("cache.type"),
     COOKIE_NAME("cookie.name"),
     COOKIE_ENCRYPTION("cookie.encryption"),
     COOKIE_EXPIRES("cookie.expires"),
@@ -61,6 +61,7 @@ public enum Key {
     VALIDATION_NUMERIC("validation.numeric"),
     VERSION("version"),
     CACHE_MAX_SIZE("cache.maxsize"),
+    CACHE_EVICTION("cache.eviction"),
     CACHE_EXPIRES("cache.expires"),
     OAUTH_TWITTER_KEY("oauth.twitter.key"),
     OAUTH_TWITTER_SECRET("oauth.twitter.secret"),
