@@ -1,0 +1,9 @@
+package io.mangoo.interfaces;
+
+/**
+ * 
+ * @author svenkubiak
+ *
+ */
+public interface MangooCache {
+}
